処理の呼び出し側（main）をシンプルに

--- a/RagiMagick/RagiMagick/RagiMagick.vcxproj
+++ b/RagiMagick/RagiMagick/RagiMagick.vcxproj
@@ -179,12 +179,15 @@
     <ClInclude Include="image\BitmapConverter.h" />
     <ClInclude Include="image\filters\GrayscaleFilter.h" />
     <ClInclude Include="image\filters\IImageFilter.h" />
+    <ClInclude Include="image\filters\NegativeFilter.h" />
+    <ClInclude Include="image\filters\types.h" />
     <ClInclude Include="image\types.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="image\Bitmap.cpp" />
     <ClCompile Include="image\BitmapConverter.cpp" />
     <ClCompile Include="image\filters\GrayscaleFilter.cpp" />
+    <ClCompile Include="image\filters\NegativeFilter.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
