--- a/RagiMagick/RagiMagick/RagiMagick.vcxproj
+++ b/RagiMagick/RagiMagick/RagiMagick.vcxproj
@@ -182,6 +182,8 @@
     <ClInclude Include="ragii\image\filters\NegativeFilter.h" />
     <ClInclude Include="ragii\image\filters\types.h" />
     <ClInclude Include="ragii\image\types.h" />
+    <ClInclude Include="ragii\text\text.h" />
+    <ClInclude Include="ragii\type\type_traits.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ragii\image\Bitmap.cpp" />
