--- a/RagiMagick/RagiMagick/ragii/image/filters/CMakeLists.txt
+++ b/RagiMagick/RagiMagick/ragii/image/filters/CMakeLists.txt
@@ -1,5 +1,5 @@
-cmake_minimum_required(VERSION 2.8)
-add_library(Filters
+cmake_minimum_required(VERSION 3.14)
+add_library(ragii-filters
   BinaryFilter.cpp
   GrayscaleFilter.cpp
   LaplacianFilter.cpp
