--- a/RagiMagick/RagiMagick/ragii/image/filters/CMakeLists.txt
+++ b/RagiMagick/RagiMagick/ragii/image/filters/CMakeLists.txt
@@ -14,6 +14,7 @@ endif()
 
 add_library(ragii-filters
   BinaryFilter.cpp
+  GaussianFilter.cpp
   GrayscaleFilter.cpp
   LaplacianFilter.cpp
   NegativeFilter.cpp
