モザイク（適当。アルゴリズムをちゃんと確認していない。）

--- a/RagiMagick/RagiMagick/ragii/image/filters/CMakeLists.txt
+++ b/RagiMagick/RagiMagick/ragii/image/filters/CMakeLists.txt
@@ -17,5 +17,6 @@ add_library(ragii-filters
   GaussianFilter.cpp
   GrayscaleFilter.cpp
   LaplacianFilter.cpp
+  MosaicFilter.cpp
   NegativeFilter.cpp
 )
