IDEからヘッダが見えるよう修正

--- a/RagiMagick/CMakeLists.txt
+++ b/RagiMagick/CMakeLists.txt
@@ -4,6 +4,7 @@ enable_language(CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
 project(RagiMagick CXX)
 
@@ -19,16 +20,21 @@ elseif(CMAKE_CXX_COMPILER_ID MATCHES Clang|GNU|AppleClang)
     add_compile_options(-Wall -Wextra -pedantic -Werror)
 endif()
 
-add_executable(RagiMagick main.cpp)
+source_group("Sources" FILES main.cpp)
 
 add_subdirectory(ragii)
-target_link_libraries(RagiMagick ragii)
-
 add_subdirectory(ragii-image)
+
+add_executable(RagiMagick main.cpp)
+target_link_libraries(RagiMagick ragii)
 target_link_libraries(RagiMagick ragii-image)
+
+target_include_directories(RagiMagick PRIVATE "ragii/include")
+target_include_directories(RagiMagick PRIVATE "ragii-image/include")
 
 # 依存関係を設定
 # コードフォーマットが最初に実行されるよう、各ターゲットが RAGIMAGICK_CODE_FORMAT_TARGET_NAME に依存するよう設定している
-add_dependencies(ragii ${RAGIMAGICK_CODE_FORMAT_TARGET_NAME})
-add_dependencies(ragii-image ${RAGIMAGICK_CODE_FORMAT_TARGET_NAME})
-add_dependencies(RagiMagick ${RAGIMAGICK_CODE_FORMAT_TARGET_NAME})
+# ※ ビルド済みでも毎回フォーマットが実行されてしまった。ファイル数が少なくても待ち時間が気になるから無効化しておく。
+#add_dependencies(ragii ${RAGIMAGICK_CODE_FORMAT_TARGET_NAME})
+#add_dependencies(ragii-image ${RAGIMAGICK_CODE_FORMAT_TARGET_NAME})
+#add_dependencies(RagiMagick ${RAGIMAGICK_CODE_FORMAT_TARGET_NAME})
