--- a/RagiMagick/CMakeLists.txt
+++ b/RagiMagick/CMakeLists.txt
@@ -15,22 +15,21 @@ format_code(${RAGIMAGICK_CODE_FORMAT_TARGET_NAME})
 
 if (MSVC)
     add_compile_options(/W4 /WX)
-    set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${CMAKE_PROJECT_NAME})
+    set_property(DIRECTORY ${CMAKE_CURRENT_LIST_DIR} PROPERTY VS_STARTUP_PROJECT "${CMAKE_PROJECT_NAME}")
 elseif(CMAKE_CXX_COMPILER_ID MATCHES Clang|GNU|AppleClang)
     add_compile_options(-Wall -Wextra -pedantic -Werror)
 endif()
 
-source_group("Sources" FILES main.cpp)
+source_group("Sources" FILES src/main.cpp)
 
-add_subdirectory(ragii)
-add_subdirectory(ragii-image)
+add_subdirectory(lib/ragii)
+add_subdirectory(lib/ragii-image)
 
-add_executable(RagiMagick main.cpp)
+add_executable(RagiMagick src/main.cpp)
 target_link_libraries(RagiMagick ragii)
 target_link_libraries(RagiMagick ragii-image)
 
-target_include_directories(RagiMagick PRIVATE "ragii/include")
-target_include_directories(RagiMagick PRIVATE "ragii-image/include")
+target_include_directories(RagiMagick PRIVATE "lib")
 
 # 依存関係を設定
 # コードフォーマットが最初に実行されるよう、各ターゲットが RAGIMAGICK_CODE_FORMAT_TARGET_NAME に依存するよう設定している
