--- a/RagiMagick/lib/ragii-image/CMakeLists.txt
+++ b/RagiMagick/lib/ragii-image/CMakeLists.txt
@@ -11,6 +11,7 @@ add_definitions(-DGLM_FORCE_PURE)
 if (MSVC)
     # add_compile_options(/W4 /WX)
     add_compile_options(/W4)
+    add_compile_options(/arch:IA32 /arch:SSE /arch:SSE2 /arch:AVX /arch:AVX2)
 elseif(CMAKE_CXX_COMPILER_ID MATCHES Clang|GNU|AppleClang)
     # add_compile_options(-Wall -Wextra -pedantic -Werror -Wunused-function)
     add_compile_options(-Wall -Wextra -pedantic)
