cpu情報取得を ragii へ移動

--- a/RagiMagick/lib/ragii/CMakeLists.txt
+++ b/RagiMagick/lib/ragii/CMakeLists.txt
@@ -4,25 +4,33 @@ project(ragii CXX)
 
 if (MSVC)
     add_compile_options(/W4 /WX)
-    # add_compile_options(/W4)
 elseif(CMAKE_CXX_COMPILER_ID MATCHES Clang|GNU|AppleClang)
     # add_compile_options(-Wall -Wextra -pedantic -Werror -Wunused-function)
     add_compile_options(-Wall -Wextra -pedantic)
-    add_compile_options(-mfma4 -mxop -msse2 -msse3 -msse4a -msse4.1 -msse4.2 -mavx -mavx2 -mxsave)
 endif()
 
 
+file(GLOB RAGII_HEADERS include/*.h)
+file(GLOB RAGII_SOURCES src/*.cpp)
+file(GLOB RAGII_HARDWARE_HEADERS include/hardware/*.h)
+file(GLOB RAGII_HARDWARE_SOURCES src/hardware/*.cpp)
 file(GLOB RAGII_TEXT_HEADERS include/text/*.h)
 file(GLOB RAGII_TYPE_HEADERS include/type/*.h)
-file(GLOB RAGII_SOURCES src/*.cpp)
-source_group("Headers" FILES ${RAGII_TEXT_HEADERS})
-source_group("Headers" FILES ${RAGII_TYPE_HEADERS})
+
+source_group("Headers" FILES ${RAGII_HEADERS})
 source_group("Sources" FILES ${RAGII_SOURCES})
+source_group("Headers\\hardware" FILES ${RAGII_HARDWARE_HEADERS})
+source_group("Sources\\hardware" FILES ${RAGII_HARDWARE_SOURCES})
+source_group("Headers\\text" FILES ${RAGII_TEXT_HEADERS})
+source_group("Headers\\type" FILES ${RAGII_TYPE_HEADERS})
 
 add_library(ragii STATIC
+    ${RAGII_HEADERS}
+    ${RAGII_SOURCES}
+    ${RAGII_HARDWARE_HEADERS}
+    ${RAGII_HARDWARE_SOURCES}
     ${RAGII_TEXT_HEADERS}
     ${RAGII_TYPE_HEADERS}
-    ${RAGII_SOURCES}
 )
 
 target_include_directories(ragii PUBLIC "include")
