ragii-image から libjpeg-turbo 本体と、cmake実行時に生成される jconfig.h のあるディレクトリをインクルードパスに追加

--- a/RagiMagick/lib/ragii-image/CMakeLists.txt
+++ b/RagiMagick/lib/ragii-image/CMakeLists.txt
@@ -41,3 +41,5 @@ add_library(ragii-image STATIC
 target_include_directories(ragii-image PUBLIC "include")
 target_include_directories(ragii-image PUBLIC "include/filters")
 target_include_directories(ragii-image PUBLIC "include/formats")
+target_include_directories(ragii-image PRIVATE "../libjpeg-turbo")
+target_include_directories(ragii-image PRIVATE "${CMAKE_BINARY_DIR}/lib/libjpeg-turbo")
