--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "RagiMagick/lib/libpng"]
 	path = RagiMagick/lib/libpng
 	url = git@github.com:glennrp/libpng.git
+[submodule "RagiMagick/lib/zlib"]
+	path = RagiMagick/lib/zlib
+	url = git@github.com:ragingo/zlib.git
