--- a/RagiMagick/lib/ragii-image/CMakeLists.txt
+++ b/RagiMagick/lib/ragii-image/CMakeLists.txt
@@ -43,3 +43,5 @@ target_include_directories(ragii-image PUBLIC "include/filters")
 target_include_directories(ragii-image PUBLIC "include/formats")
 target_include_directories(ragii-image PRIVATE "../libjpeg-turbo")
 target_include_directories(ragii-image PRIVATE "${CMAKE_BINARY_DIR}/lib/libjpeg-turbo")
+target_include_directories(ragii-image PRIVATE "../libpng")
+target_include_directories(ragii-image PRIVATE "${CMAKE_BINARY_DIR}/lib/libpng")
