メモリ関連をragiiへ移動

--- a/RagiMagick/lib/ragii/CMakeLists.txt
+++ b/RagiMagick/lib/ragii/CMakeLists.txt
@@ -14,6 +14,7 @@ file(GLOB RAGII_HEADERS include/*.h)
 file(GLOB RAGII_SOURCES src/*.cpp)
 file(GLOB RAGII_HARDWARE_HEADERS include/hardware/*.h)
 file(GLOB RAGII_HARDWARE_SOURCES src/hardware/*.cpp)
+file(GLOB RAGII_MEMORY_HEADERS include/memory/*.h)
 file(GLOB RAGII_TEXT_HEADERS include/text/*.h)
 file(GLOB RAGII_TYPE_HEADERS include/type/*.h)
 
@@ -21,6 +22,7 @@ source_group("Headers" FILES ${RAGII_HEADERS})
 source_group("Sources" FILES ${RAGII_SOURCES})
 source_group("Headers\\hardware" FILES ${RAGII_HARDWARE_HEADERS})
 source_group("Sources\\hardware" FILES ${RAGII_HARDWARE_SOURCES})
+source_group("Headers\\memory" FILES ${RAGII_MEMORY_HEADERS})
 source_group("Headers\\text" FILES ${RAGII_TEXT_HEADERS})
 source_group("Headers\\type" FILES ${RAGII_TYPE_HEADERS})
 
@@ -29,6 +31,7 @@ add_library(ragii STATIC
     ${RAGII_SOURCES}
     ${RAGII_HARDWARE_HEADERS}
     ${RAGII_HARDWARE_SOURCES}
+    ${RAGII_MEMORY_HEADERS}
     ${RAGII_TEXT_HEADERS}
     ${RAGII_TYPE_HEADERS}
 )
