--- a/RagiMagick/lib/ragii-image/CMakeLists.txt
+++ b/RagiMagick/lib/ragii-image/CMakeLists.txt
@@ -41,6 +41,7 @@ add_library(ragii-image STATIC
 target_include_directories(ragii-image PUBLIC "include")
 target_include_directories(ragii-image PUBLIC "include/filters")
 target_include_directories(ragii-image PUBLIC "include/formats")
+target_include_directories(ragii-image PRIVATE "../ragii/include")
 target_include_directories(ragii-image PRIVATE "../libjpeg-turbo")
 target_include_directories(ragii-image PRIVATE "${CMAKE_BINARY_DIR}/lib/libjpeg-turbo")
 target_include_directories(ragii-image PRIVATE "../libpng")
