--- a/RagiMagick/CMakeLists.txt
+++ b/RagiMagick/CMakeLists.txt
@@ -19,6 +19,7 @@ set(RAGIMAGICK_CODE_FORMAT_TARGET_NAME "${CMAKE_PROJECT_NAME}_code-format")
 format_code(${RAGIMAGICK_CODE_FORMAT_TARGET_NAME})
 
 if (MSVC)
+    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
     add_compile_options(/W4)
     set_property(DIRECTORY ${CMAKE_CURRENT_LIST_DIR} PROPERTY VS_STARTUP_PROJECT "${CMAKE_PROJECT_NAME}")
 elseif(CMAKE_CXX_COMPILER_ID MATCHES Clang|GNU|AppleClang)
