コンパイラオプション見直し

--- a/RagiMagick/CMakeLists.txt
+++ b/RagiMagick/CMakeLists.txt
@@ -23,7 +23,8 @@ if (MSVC)
     add_compile_options(/W4)
     set_property(DIRECTORY ${CMAKE_CURRENT_LIST_DIR} PROPERTY VS_STARTUP_PROJECT "${CMAKE_PROJECT_NAME}")
 elseif(CMAKE_CXX_COMPILER_ID MATCHES Clang|GNU|AppleClang)
-    add_compile_options(-Wall -Wextra -pedantic -Werror)
+    add_compile_options(-Wall -Wextra -pedantic)
+    add_compile_options(-Wno-unused-function -Wno-unused-parameter -Wno-padded -Wno-sign-conversion -Wno-sign-compare)
 endif()
 
 source_group("Sources" FILES src/main.cpp)
