--- a/RagiMagick/lib/ragii-image/CMakeLists.txt
+++ b/RagiMagick/lib/ragii-image/CMakeLists.txt
@@ -13,8 +13,8 @@ if (MSVC)
     add_compile_options(/W4)
     add_compile_options(/arch:IA32 /arch:SSE /arch:SSE2 /arch:AVX /arch:AVX2)
 elseif(CMAKE_CXX_COMPILER_ID MATCHES Clang|GNU|AppleClang)
-    # add_compile_options(-Wall -Wextra -pedantic -Werror -Wunused-function)
     add_compile_options(-Wall -Wextra -pedantic)
+    add_compile_options(-Wno-unused-function -Wno-unused-parameter -Wno-padded -Wno-sign-conversion -Wno-sign-compare)
     add_compile_options(-mfma4 -mxop -msse2 -msse3 -msse4a -msse4.1 -msse4.2 -mavx -mavx2 -mxsave)
 endif()
 
