ライブラリ名修正

--- a/RagiMagick/CMakeLists.txt
+++ b/RagiMagick/CMakeLists.txt
@@ -38,9 +38,9 @@ add_subdirectory(lib/zlib EXCLUDE_FROM_ALL)
 set(ZLIB_INCLUDE_DIR "${CMAKE_CURRENT_LIST_DIR}/lib/zlib;${CMAKE_BINARY_DIR}/lib/zlib")
 set(ZLIB_INCLUDE_DIRS "${ZLIB_INCLUDE_DIR}")
 if(${CMAKE_BUILD_TYPE_UC} MATCHES "DEBUG")
-    set(ZLIB_LIBRARY "${CMAKE_BINARY_DIR}/lib/zlib/Debug/zlibd.lib")
+    set(ZLIB_LIBRARY "${CMAKE_BINARY_DIR}/lib/zlib/Debug/zlibstaticd.lib")
 else()
-    set(ZLIB_LIBRARY "${CMAKE_BINARY_DIR}/lib/zlib/Release/zlib.lib")
+    set(ZLIB_LIBRARY "${CMAKE_BINARY_DIR}/lib/zlib/Release/zlibstatic.lib")
 endif()
 set(ZLIB_LIBRARIES "${ZLIB_LIBRARY}")
 set(ZLIB_FOUND true)
