--- a/RagiMagick/lib/ragii-image/CMakeLists.txt
+++ b/RagiMagick/lib/ragii-image/CMakeLists.txt
@@ -42,7 +42,7 @@ target_include_directories(ragii-image PUBLIC "include")
 target_include_directories(ragii-image PUBLIC "include/filters")
 target_include_directories(ragii-image PUBLIC "include/formats")
 target_include_directories(ragii-image PRIVATE "../ragii/include")
-target_include_directories(ragii-image PRIVATE "../libjpeg-turbo")
-target_include_directories(ragii-image PRIVATE "${CMAKE_BINARY_DIR}/lib/libjpeg-turbo")
-target_include_directories(ragii-image PRIVATE "../libpng")
-target_include_directories(ragii-image PRIVATE "${CMAKE_BINARY_DIR}/lib/libpng")
+target_include_directories(ragii-image PRIVATE "${RAGIMAGICK_EXTERNALLIB_LIBJPEG_TURBO_SRC}")
+target_include_directories(ragii-image PRIVATE "${RAGIMAGICK_EXTERNALLIB_LIBJPEG_TURBO_CACHE}")
+target_include_directories(ragii-image PRIVATE "${RAGIMAGICK_EXTERNALLIB_LIBPNG_SRC}")
+target_include_directories(ragii-image PRIVATE "${RAGIMAGICK_EXTERNALLIB_LIBPNG_CACHE}")
